# PolyMap

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: deploy-demo.yml
docs/: library-extraction.md  tile-pipeline-upgrades.md
js/: README.md  package.json
js/src/: PolyMap.vue  index.js  polymap.d.ts  polymap.js
polymap-worker/: Cargo.toml
polymap-worker/.cargo/: config.toml
polymap-worker/src/: lib.rs  mapdata.rs  mvt.rs  mvt_convert.rs
src/: api.rs  app.rs  camera.rs  cars.rs  cars.wgsl  config.rs  gpu.rs  lib.rs  main.rs  map.wgsl  mapdata.rs  mvt_convert.rs  noise.rs  noise.wgsl  pmtiles.rs  renderer.rs  terrain.wgsl  text.rs  text.wgsl  texture.rs  tiles.rs  worker.rs
web/: index.html  server.py  tile-worker.js
