[package]
name = "polymap"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "3D map renderer powered by WebGPU and Rust/WASM"
repository = "https://github.com/CottageHop/PolyMap"
keywords = ["map", "3d", "webgpu", "wasm", "openstreetmap"]
categories = ["rendering", "wasm", "graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

# Optimize release builds
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wgpu = { version = "24", features = ["webgl"] }
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
log = "0.4"
serde_json = "1"
earcutr = "0.4"
fontdue = "0.9"
web-time = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"
env_logger = "0.11"
ureq = "2"

[dependencies.serde]
version = "1"
features = ["derive"]

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "AddEventListenerOptions",
    "Document",
    "DomRect",
    "Element",
    "EventTarget",
    "Headers",
    "HtmlCanvasElement",
    "MouseEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WheelEvent",
    "Window",
] }
js-sys = "0.3"
