[package]
name = "polymap-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
log = "0.4"
serde_json = "1"
earcutr = "0.4"
web-time = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"

[dependencies.serde]
version = "1"
features = ["derive"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "WorkerGlobalScope",
] }
